--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,10 @@ nav li {
 .map-container {
   height: 400px;
 }
+
+.pin-button {
+  background: none;
+  width: 10px;
+  border: none;
+  cursor: pointer;
+}
